buildscript {
    ext {

    }

    repositories {
        mavenLocal()
        mavenCentral()
        google()
    }
}

plugins {
    id 'java'
}

allprojects {
    apply plugin: 'java'

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    // java编译的时候缺省状态下会因为中文字符而失败
    [compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'

    version = projectVersion
    group = 'org.tron.defi'
    description = 'contract mirror'

    repositories {
        mavenLocal()
        mavenCentral()
        google()

        maven {
            allowInsecureProtocol = true
            url 'http://maven.aliyun.com/repository/public/'
        }

        maven {
            allowInsecureProtocol = true
            url 'http://maven.aliyun.com/nexus/content/repositories/google'
        }

        maven {
            allowInsecureProtocol = true
            url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
        }
    }

    configurations {
        // 所有需要忽略的包定义在此
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_11
        withSourcesJar()
    }

    // general dependencies
    dependencies {
        implementation "com.google.guava:guava:${guavaVersion}"

        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    }
}